vlib/v/checker/tests/if_expr_no_else.out
vlib/v/checker/tests/if_expr_no_else.vv:2:9: error: `if` expression needs `else` clause
    1 | fn main() {
    2 |     _ = if true { 1 }
      |         ~~
    3 | }
